--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,11 +14,11 @@ doctrine:
             Doctrine\DBAL\Platforms\PostgreSQLPlatform: identity
         auto_mapping: true
         mappings:
-            User:
+            App:
                 is_bundle: false
                 type: attribute
-                dir: '%kernel.project_dir%/src/User/Domain/Entity'
-                prefix: 'App\User\Domain\Entity'
+                dir: '%kernel.project_dir%/src/Domain/Entity'
+                prefix: 'App\Domain\Entity'
         controller_resolver:
             auto_mapping: false
 
