--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\User\Domain\Entity\User
+                class: App\Domain\Entity\User
                 property: email
 
     firewalls:
