--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,6 +7,11 @@
 # To list all registered routes, run the following command:
 #   bin/console debug:router
 
-user_controllers:
-    resource: ../src/Shared/Infrastructure/Rest/Controller/
+shared_web:
+    resource: ../src/Shared/Infrastructure/EntryPoints/Http/Web/
     type: attribute
+
+app_rest:
+    resource: ../src/Infrastructure/EntryPoints/Http/Rest
+    type: attribute
+    prefix: /api
