--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^3.6",
         "phpdocumentor/reflection-docblock": "^6.0",
         "phpstan/phpdoc-parser": "^2.3",
+        "symfony/asset": "7.4.*",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/error-handler": "7.4.*",
@@ -29,6 +30,12 @@
         "symfonycasts/verify-email-bundle": "^1.18"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
+        "fakerphp/faker": "^1.24",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
+        "psy/psysh": "^0.12.18",
         "symfony/debug-bundle": "7.4.*",
         "symfony/maker-bundle": "1.65",
         "symfony/monolog-bundle": "^3.0|^4.0",
