--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,7 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
+        #- { path: ^/, roles: ROLE_USER }
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/api, roles: ROLE_USER }
     role_hierarchy:
