--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,11 +14,16 @@ doctrine:
             Doctrine\DBAL\Platforms\PostgreSQLPlatform: identity
         auto_mapping: true
         mappings:
-            App:
+            AppEntity:
                 is_bundle: false
                 type: attribute
                 dir: '%kernel.project_dir%/src/Domain/Entity'
                 prefix: 'App\Domain\Entity'
+            AppValueObjects:
+                is_bundle: false
+                type: attribute
+                dir: '%kernel.project_dir%/src/Domain/ValueObject'
+                prefix: 'App\Domain\ValueObject'
         controller_resolver:
             auto_mapping: false
 
