--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
         volumes:
             - .:/var/www/html
         environment:
-            #DATABASE_URL: "mysql://user:password@mysql:3306/symfony_db"
             REDIS_URL: "redis://redis:6379"
+        depends_on:
+            - mysql
+            - redis
+            - nginx
 
     # Nginx Web Server
     nginx:
