--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,3 +19,8 @@ app_rest:
 app_web:
     resource: ../src/Infrastructure/EntryPoints/Http/Web
     type: attribute
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
