--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+        - business
 
 when@dev:
     monolog:
@@ -9,11 +10,16 @@ when@dev:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
-                channels: ["!event"]
+                channels: ["!event", "!business"]
             console:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+            business_logs:
+                type: stream
+                path: "%kernel.logs_dir%/business.log"
+                level: debug
+                channels: ["business"]
 
 when@test:
     monolog:
