--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/serializer": "7.4.*",
         "symfony/validator": "7.4.*",
         "symfony/yaml": "7.4.*",
-        "symfonycasts/verify-email-bundle": "^1.18"
+        "symfonycasts/verify-email-bundle": "^1.18",
+        "ext-zend-opcache": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.3",
