--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "ext-zend-opcache": "*"
     },
     "require-dev": {
+        "artemalexeev/systeminfo": "1.1",
         "doctrine/doctrine-fixtures-bundle": "^4.3",
         "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
